--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
+ephem==4.1.1
 fbprophet==0.7.1
 pandas==1.3.4
 plotly==5.1.0
+pystan==2.19.1.1
 scikit-learn==1.0.1
 statsmodels==0.12.0
-pystan==2.19.1.1
